그리디 & 구현 완료

--- a/3. 그리디.ipynb
+++ b/3. 그리디.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,10 +33,108 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 6, 6, 5, 5, 5, 4, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 복습 겸 92 96 페이지 문제 풀고 구현으로 들어가기"
+    "# 92 큰 수의 법칙\n",
+    "#N, M, K = map(int, input().split())\n",
+    "#n = list(map(int, input().split()))\n",
+    "N, M, K = 5, 8, 3\n",
+    "n = [2,4,5,4,6]\n",
+    "result = []\n",
+    "n.sort(reverse=True)\n",
+    "j = 0\n",
+    "for i in range(M):\n",
+    "    if i < K:\n",
+    "        result.append(n[0])\n",
+    "    else:\n",
+    "        if i % K == 0:\n",
+    "            j += 1\n",
+    "        result.append(n[j])\n",
+    "    \n",
+    "print(result)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46 [6, 6, 6, 5, 6, 6, 6, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 아 k 한번만 지키면 됨;;\n",
+    "\n",
+    "N, M, K = 5, 8, 3\n",
+    "n = [2,4,5,4,6]\n",
+    "result = []\n",
+    "n.sort(reverse=True)\n",
+    "\n",
+    "n1 = n[0]\n",
+    "n2 = n[1]\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "while (len(result) < M):\n",
+    "    result.append(n1)\n",
+    "        \n",
+    "    if i%K == (K-1):\n",
+    "        result.append(n2)\n",
+    "    i += 1            \n",
+    "        \n",
+    "print(sum(result), result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 수열로 {6 6 6 5} 가 반복됨 \n",
+    "\n",
+    "N, M, K = 5, 8, 3\n",
+    "n = [2,4,5,4,6]\n",
+    "result = 0\n",
+    "n.sort(reverse=True)\n",
+    "\n",
+    "n1 = n[0]\n",
+    "n2 = n[1]\n",
+    "\n",
+    "# 횟수\n",
+    "count = int(M/(K+1))*K\n",
+    "count += M % (K+1)\n",
+    "print(count)\n",
+    "\n",
+    "result += count * n1\n",
+    "result += (M-count) * n2\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -44,13 +142,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 92 큰 수의 법칙"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +260,7 @@
     "\n",
     "for i in range(1, len(n)):\n",
     "    num = int(n[i])\n",
-    "    if num <= 1 or result <= 1:        \n",
+    "    if num <= 1 or result <= 1: # 0, 1 일땐 더하기         \n",
     "        result = result + num\n",
     "    else:\n",
     "        result *= num\n",
@@ -173,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
