--- a/HackerRank/Easy/_Linked Lists .ipynb
+++ b/HackerRank/Easy/_Linked Lists .ipynb
@@ -2,134 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[16, 13, 1, 7]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Insert a node at a specific position in a linked list\n",
+    "n = 3\n",
+    "llist=[16, 13, 7]\n",
+    "data = 1\n",
+    "position = 2\n",
     "\n",
-    "3\n",
-    "16\n",
-    "13\n",
-    "7\n",
-    "1\n",
-    "2"
+    "a = []\n",
+    "a.extend(llist[:position])\n",
+    "a.extend([data])\n",
+    "a.extend(llist[position:])\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/bin/python3\n",
-    "\n",
-    "import math\n",
-    "import os\n",
-    "import random\n",
-    "import re\n",
-    "import sys\n",
-    "\n",
-    "class SinglyLinkedListNode:\n",
-    "    def __init__(self, node_data):\n",
-    "        self.data = node_data\n",
-    "        self.next = None\n",
-    "\n",
-    "class SinglyLinkedList:\n",
-    "    def __init__(self):\n",
-    "        self.head = None\n",
-    "        self.tail = None\n",
-    "\n",
-    "    def insert_node(self, node_data):\n",
-    "        node = SinglyLinkedListNode(node_data)\n",
-    "\n",
-    "        if not self.head:\n",
-    "            self.head = node\n",
-    "        else:\n",
-    "            self.tail.next = node\n",
-    "\n",
-    "\n",
-    "        self.tail = node\n",
-    "\n",
-    "def print_singly_linked_list(node, sep, fptr):\n",
-    "    while node:\n",
-    "        fptr.write(str(node.data))\n",
-    "\n",
-    "        node = node.next\n",
-    "\n",
-    "        if node:\n",
-    "            fptr.write(sep)\n",
-    "\n",
-    "#\n",
-    "# Complete the 'insertNodeAtPosition' function below.\n",
-    "#\n",
-    "# The function is expected to return an INTEGER_SINGLY_LINKED_LIST.\n",
-    "# The function accepts following parameters:\n",
-    "#  1. INTEGER_SINGLY_LINKED_LIST llist\n",
-    "#  2. INTEGER data\n",
-    "#  3. INTEGER position\n",
-    "#\n",
-    "\n",
-    "#\n",
-    "# For your reference:\n",
-    "#\n",
-    "# SinglyLinkedListNode:\n",
-    "#     int data\n",
-    "#     SinglyLinkedListNode next\n",
-    "#\n",
-    "#\n",
-    "\n",
-    "def insertNodeAtPosition(llist, data, position):\n",
-    "    # Write your code here\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
-    "\n",
-    "    llist_count = int(input())\n",
-    "\n",
-    "    llist = SinglyLinkedList()\n",
-    "\n",
-    "    for _ in range(llist_count):\n",
-    "        llist_item = int(input())\n",
-    "        llist.insert_node(llist_item)\n",
-    "\n",
-    "    data = int(input())\n",
-    "\n",
-    "    position = int(input())\n",
-    "\n",
-    "    llist_head = insertNodeAtPosition(llist.head, data, position)\n",
-    "\n",
-    "    print_singly_linked_list(llist_head, ' ', fptr)\n",
-    "    fptr.write('\\n')\n",
-    "\n",
-    "    fptr.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 10]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Inserting a Node Into a Sorted Doubly Linked List\n",
+    "t = 1\n",
+    "n = 4\n",
+    "node = [1, 3, 4, 10]\n",
+    "data = 5\n",
     "\n",
-    "STDIN   Function\n",
-    "-----   --------\n",
-    "1       t = 1\n",
-    "4       n = 4\n",
-    "1       node data values = 1, 3, 4, 10\n",
-    "3\n",
-    "4\n",
-    "10\n",
-    "5       data = 5\n",
-    "\n"
+    "node.append(data)\n",
+    "node.sort()\n",
+    "node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "16\n",
+      "13\n",
+      "7\n",
+      "1\n",
+      "2\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-c67634ded292>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mllist_count\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 74\u001b[1;33m         \u001b[0mllist_item\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     75\u001b[0m         \u001b[0mllist\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert_node\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mllist_item\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     76\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
    "source": [
     "#!/bin/python3\n",
     "\n",
@@ -192,29 +150,29 @@
     "\n",
     "def sortedInsert(llist, data):\n",
     "    # Write your code here\n",
+    "    pass\n",
+    "#if __name__ == '__main__':\n",
+    "    #fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "t = int(input())\n",
     "\n",
-    "    t = int(input())\n",
+    "for t_itr in range(t):\n",
+    "    llist_count = int(input())\n",
     "\n",
-    "    for t_itr in range(t):\n",
-    "        llist_count = int(input())\n",
+    "    llist = DoublyLinkedList()\n",
     "\n",
-    "        llist = DoublyLinkedList()\n",
+    "    for _ in range(llist_count):\n",
+    "        llist_item = int(input())\n",
+    "        llist.insert_node(llist_item)\n",
     "\n",
-    "        for _ in range(llist_count):\n",
-    "            llist_item = int(input())\n",
-    "            llist.insert_node(llist_item)\n",
+    "    data = int(input())\n",
     "\n",
-    "        data = int(input())\n",
+    "    llist1 = sortedInsert(llist.head, data)\n",
     "\n",
-    "        llist1 = sortedInsert(llist.head, data)\n",
+    "    #print_doubly_linked_list(llist1, ' ', fptr)\n",
+    "    #fptr.write('\\n')\n",
     "\n",
-    "        print_doubly_linked_list(llist1, ' ', fptr)\n",
-    "        fptr.write('\\n')\n",
-    "\n",
-    "    fptr.close()\n"
+    "#fptr.close()\n"
    ]
   },
   {
