--- a/HackerRank/Medium/_Dictionaries and Hashmaps .ipynb
+++ b/HackerRank/Medium/_Dictionaries and Hashmaps .ipynb
@@ -2,16 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sherlock and Anagrams\n",
+    "\n",
+    "from collections import Counter\n",
+    "from itertools import combinations\n",
+    "s = 'abba'\n",
+    "\n",
+    "a = [''.join(sorted(x)) for x in (list(combinations(list(s), 2)))]\n",
+    "len(set(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['abb', 'aab', 'aab', 'abb']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "a = [''.join(sorted(x)) for x in (list(combinations(list(s), 3)))]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sherlock and Anagrams\n",
-    "\n",
     "2\n",
     "abba\n",
     "abcd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
