--- a/HackerRank/Medium/_Dictionaries and Hashmaps .ipynb
+++ b/HackerRank/Medium/_Dictionaries and Hashmaps .ipynb
@@ -2,97 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'a': 2, 'b': 2, 'ab': 2, 'abb': 2, 'bb': 1})\n",
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "# Sherlock and Anagrams\n",
-    "\n",
     "from collections import Counter\n",
-    "from itertools import combinations\n",
     "s = 'abba'\n",
-    "\n",
-    "a = [''.join(sorted(x)) for x in (list(combinations(list(s), 2)))]\n",
-    "len(set(a))"
+    "count = Counter((\"\".join(sorted(s[j:j+i])) for i in range(1,len(s)) for j in range(0,len(s)-i+1) ))\n",
+    "print(count)\n",
+    "print(sum(sum(range(i)) for i in count.values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['abb', 'aab', 'aab', 'abb']"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 a\n",
+      "1 1 b\n",
+      "1 2 b\n",
+      "1 3 a\n",
+      "2 0 ab\n",
+      "2 1 bb\n",
+      "2 2 ab\n",
+      "3 0 abb\n",
+      "3 1 abb\n"
+     ]
     }
    ],
    "source": [
-    "\n",
-    "a = [''.join(sorted(x)) for x in (list(combinations(list(s), 3)))]\n",
-    "a"
+    "for i in range(1, len(s)):\n",
+    "    for j in range(0, len(s)-i+1):\n",
+    "        print(i, j, ''.join(sorted(s[j:j+i])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "2\n",
-    "abba\n",
-    "abcd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2\n",
-    "ifailuhkqq\n",
-    "kkkk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1\n",
-    "cdcd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-c950cc58c804>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-c950cc58c804>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    4 2\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Count Triplets\n",
     "\n",
