--- a/HackerRank/Medium/_Stacks and Queues.ipynb
+++ b/HackerRank/Medium/_Stacks and Queues.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{ ( ['{']\n",
-      "( ( ['{', '(']\n",
-      "( [ ['{', '(', '(']\n",
-      "[ ] ['{', '(', '(', '[']\n",
-      "( ) ['{', '(', '(']\n",
-      "( [ ['{', '(']\n",
-      "[ ] ['{', '(', '[']\n",
-      "( ) ['{', '(']\n",
-      "{ [ ['{']\n",
-      "[ ] ['{', '[']\n",
-      "{ } ['{']\n",
-      "YES\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Balanced Brackets\n",
     "\n",
@@ -54,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,20 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Largest Rectangle\n",
     "n = 5\n",
@@ -93,58 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 []\n",
-      "if [0]\n",
-      "1 [0]\n",
-      "else []\n",
-      "1 []\n",
-      "if [1]\n",
-      "2 [1]\n",
-      "if [1, 2]\n",
-      "3 [1, 2]\n",
-      "else [1]\n",
-      "3 [1]\n",
-      "if [1, 3]\n",
-      "4 [1, 3]\n",
-      "if [1, 3, 4]\n",
-      "5 [1, 3, 4]\n",
-      "else [1, 3]\n",
-      "5 [1, 3]\n",
-      "else [1]\n",
-      "5 [1]\n",
-      "else []\n",
-      "5 []\n",
-      "if [5]\n",
-      "6 [5]\n",
-      "if [5, 6]\n",
-      "7 [5, 6]\n",
-      "if [5, 6, 7]\n",
-      "8 [5, 6, 7]\n",
-      "else [5, 6]\n",
-      "8 [5, 6]\n",
-      "else [5]\n",
-      "8 [5]\n",
-      "else []\n",
-      "8 []\n",
-      "if [8]\n",
-      "9 [8]\n",
-      "else []\n",
-      "9 []\n",
-      "if [9]\n",
-      "\n",
-      "while1 [9]\n",
-      "while2 []\n",
-      "26152\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Largest Rectangle\n",
     "n = 10\n",
@@ -181,28 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n",
-      "[[2, 6, 1, 12], [2, 1, 1, 0], [1, 1, 0, 0], [1, 0, 0, 0]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[12, 2, 1, 1]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Min Max Riddle\n",
     "n = 4\n",
@@ -210,6 +112,7 @@
     "\n",
     "d = [[0]*(n) for _ in range(n)]\n",
     "print(d)\n",
+    "\n",
     "for i in range(n+1):\n",
     "    for j in range(n):\n",
     "        if i==0:\n",
@@ -232,24 +135,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Min Max Riddle\n",
+    "n = 4\n",
+    "arr = [2, 6, 1, 12]\n",
+    "\n",
+    "d = [[0]*(n+1) for _ in range(n)]\n",
+    "print(d)\n",
+    "k = n\n",
+    "for i in range(n+1):\n",
+    "    k -= 1\n",
+    "    for j in range(n):\n",
+    "        if i==0:\n",
+    "            d[0][j] = arr[j]\n",
+    "            d[0][n] = max(arr[j], d[0][n])\n",
+    "        else:\n",
+    "            if j <= k:\n",
+    "                d[i][j] = min(d[i-1][j], d[i-1][j+1])\n",
+    "                d[i][n] = max(d[i][j], d[i][n])\n",
+    "            \n",
+    "[i[n] for i in d] # Runtime Error :( 3건 "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'...'\n",
     "'.X.'\n",
@@ -259,14 +171,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['...', '.X.', '...']\n"
+      "0 0 .\n",
+      "0 1 .\n",
+      "0 2 .\n",
+      "1 0 .\n",
+      "1 1 X\n",
+      "1 2 .\n",
+      "2 0 .\n",
+      "2 1 .\n",
+      "2 2 .\n"
      ]
     }
    ],
@@ -277,26 +197,21 @@
     "goalX = 1\n",
     "goalY = 2\n",
     "grid = ['...', '.X.', '...']\n",
-    "print(grid)\n",
+    "\n",
+    "n, m = len(grid), len(grid[0])\n",
+    "\n",
+    "dx = [-1,1,0,0]\n",
+    "dy = [0,0,-1,1]\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'.X.'\n",
     "'.X.'\n",
@@ -306,20 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "startX = 0\n",
     "startY = 0\n",
