문제 코멘트 추가

--- a/HackerRank/Medium/_Search .ipynb
+++ b/HackerRank/Medium/_Search .ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Hash Tables: Ice Cream Parlor](https://www.hackerrank.com/challenges/ctci-ice-cream-parlor/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=search)\n",
+    "\n",
+    "가격 배열 cost, 지출해야하는 금액 money가 주어졌을 때, 두 정수로 구매할 맛의 인덱스를 리턴하시오.  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -115,11 +124,16 @@
    "outputs": [],
    "source": [
     "# Swap Nodes [Algo]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Pairs](https://www.hackerrank.com/challenges/pairs/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=search)\n",
+    "\n",
+    "배열 arr에서 k만큼 차이를 가지는 쌍의 수를 구하시오. "
    ]
   },
   {
@@ -314,11 +328,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Triple sum](https://www.hackerrank.com/challenges/triple-sum/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=search)\n",
+    "\n",
+    "배열 a,b,c에서 각각 (p,q,r)을 구성할 때, p <= q and q >= r의 조건을 만족해야한다. 삼중항은 몇개가 만들어지는가?  "
+   ]
   },
   {
    "cell_type": "code",
@@ -432,6 +448,15 @@
     "a = sorted(set(a))\n",
     "c = sorted(set(c))\n",
     "sum(bisect(a, x)*bisect(c, x) for x in b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Minimum Time Required](https://www.hackerrank.com/challenges/minimum-time-required/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=search)\n",
+    "\n",
+    "기계의 생산량이 machines 배열로 주어질 때, 목표 수량은 goal이다. 최소 일수는? "
    ]
   },
   {
