--- a/HackerRank/Medium/_Stacks and Queues.ipynb
+++ b/HackerRank/Medium/_Stacks and Queues.ipynb
@@ -1,10 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "[Balanced Brackets](https://www.hackerrank.com/challenges/balanced-brackets/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=stacks-queues)\n",
+    "\n",
+    "문자열 s는 다음 3가지 괄호들로 구성된다()[]{} 개폐가 잘 이루어지면 YES 아니면 NO  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ ( ['{']\n",
+      "( ( ['{', '(']\n",
+      "( [ ['{', '(', '(']\n",
+      "[ ] ['{', '(', '(', '[']\n",
+      "( ) ['{', '(', '(']\n",
+      "( [ ['{', '(']\n",
+      "[ ] ['{', '(', '[']\n",
+      "( ) ['{', '(']\n",
+      "{ [ ['{']\n",
+      "[ ] ['{', '[']\n",
+      "{ } ['{']\n",
+      "YES\n"
+     ]
+    }
+   ],
    "source": [
     "# Balanced Brackets\n",
     "\n",
@@ -34,20 +62,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Queues: A Tale of Two Stacks\n",
-    "## 함수 완성"
+    "[Queues: A Tale of Two Stacks](https://www.hackerrank.com/challenges/ctci-queue-using-two-stacks/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=stacks-queues)\n",
+    "\n",
+    "함수 완성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "class MyQueue(object):\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "    \n",
+    "    def peek(self):\n",
+    "        i = self.items.pop()\n",
+    "        self.items.append(i)\n",
+    "        return i\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        return self.items.pop()\n",
+    "        \n",
+    "    def put(self, value):\n",
+    "        self.items.insert(0, value)\n",
+    "        \n",
+    "\n",
+    "queue = MyQueue()\n",
+    "t = int(input())\n",
+    "for line in range(t):\n",
+    "    values = map(int, input().split())\n",
+    "    values = list(values)\n",
+    "    if values[0] == 1:\n",
+    "        queue.put(values[1])        \n",
+    "    elif values[0] == 2:\n",
+    "        queue.pop()\n",
+    "    else:\n",
+    "        print(queue.peek())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Largest Rectangle](https://www.hackerrank.com/challenges/largest-rectangle/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=stacks-queues)\n",
+    "\n",
+    "높이 배열 h로 구성할 수 있는 가장 큰 직사각형 면적은?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Largest Rectangle\n",
     "n = 5\n",
@@ -63,9 +143,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 []\n",
+      "if [0]\n",
+      "1 [0]\n",
+      "else []\n",
+      "1 []\n",
+      "if [1]\n",
+      "2 [1]\n",
+      "if [1, 2]\n",
+      "3 [1, 2]\n",
+      "else [1]\n",
+      "3 [1]\n",
+      "if [1, 3]\n",
+      "4 [1, 3]\n",
+      "if [1, 3, 4]\n",
+      "5 [1, 3, 4]\n",
+      "else [1, 3]\n",
+      "5 [1, 3]\n",
+      "else [1]\n",
+      "5 [1]\n",
+      "else []\n",
+      "5 []\n",
+      "if [5]\n",
+      "6 [5]\n",
+      "if [5, 6]\n",
+      "7 [5, 6]\n",
+      "if [5, 6, 7]\n",
+      "8 [5, 6, 7]\n",
+      "else [5, 6]\n",
+      "8 [5, 6]\n",
+      "else [5]\n",
+      "8 [5]\n",
+      "else []\n",
+      "8 []\n",
+      "if [8]\n",
+      "9 [8]\n",
+      "else []\n",
+      "9 []\n",
+      "if [9]\n",
+      "\n",
+      "while1 [9]\n",
+      "while2 []\n",
+      "26152\n"
+     ]
+    }
+   ],
    "source": [
     "# Largest Rectangle\n",
     "n = 10\n",
@@ -101,10 +230,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "[Min Max Riddle](https://www.hackerrank.com/challenges/min-max-riddle/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=stacks-queues)\n",
+    "\n",
+    "배열 arr 에서 창의 크기를 줄여가며 최소값을 구하고, 그 최소값들의 최대값을 출력하시오.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n",
+      "[[2, 6, 1, 12], [2, 1, 1, 0], [1, 1, 0, 0], [1, 0, 0, 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[12, 2, 1, 1]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Min Max Riddle\n",
     "n = 4\n",
@@ -132,9 +289,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0], [0, 0, 0, 0, 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[12, 2, 1, 1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Min Max Riddle\n",
     "n = 4\n",
@@ -159,9 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'...'\n",
     "'.X.'\n",
@@ -170,26 +356,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 .\n",
-      "0 1 .\n",
-      "0 2 .\n",
-      "1 0 .\n",
-      "1 1 X\n",
-      "1 2 .\n",
-      "2 0 .\n",
-      "2 1 .\n",
-      "2 2 .\n"
-     ]
-    }
-   ],
+   "source": [
+    "[Castle on the Grid](https://www.hackerrank.com/challenges/castle-on-the-grid/problem?h_l=interview&playlist_slugs%5B%5D=interview-preparation-kit&playlist_slugs%5B%5D=stacks-queues)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Castle on the Grid\n",
     "startX = 0\n",
@@ -209,9 +387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'.X.'\n",
     "'.X.'\n",
@@ -221,9 +410,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "startX = 0\n",
     "startY = 0\n",
